roboczy2
(cpdev50)C:\Users\OE00SG\CashPredictor\dev3\gcp batch>python build_client_db.py ^
More?   --t0 2026-03-02 ^
More?   --build-clients 13581,10095,6089,8964,8989 ^
More?   --db-path C:/Users/OE00SG/CashPredictor/dev3/databases/2026-03-02/2026-03-02/CashPredictor2.db
Traceback (most recent call last):
  File "C:\Users\OE00SG\CashPredictor\dev3\gcp batch\build_client_db.py", line 4, in <module>
    import CreateDatabase
  File "C:\Users\OE00SG\CashPredictor\dev3\gcp batch\CreateDatabase.py", line 1304
    )        min_date, max_date = cursor.fetchone()
             ^^^^^^^^
SyntaxError: invalid syntax

(cpdev50)C:\Users\OE00SG\CashPredictor\dev3\gcp batch>python build_client_db.py ^
More?   --t0 2026-03-02 ^
More?   --build-clients 13581,10095,6089,8964,8989 ^
More?   --db-path C:/Users/OE00SG/CashPredictor/dev3/databases/2026-03-02/2026-03-02/CashPredictor2.db
Traceback (most recent call last):
  File "C:\Users\OE00SG\CashPredictor\dev3\gcp batch\build_client_db.py", line 4, in <module>
    import CreateDatabase
  File "C:\Users\OE00SG\CashPredictor\dev3\gcp batch\CreateDatabase.py", line 1304
    )        min_date, max_date = cursor.fetchone()
             ^^^^^^^^
SyntaxError: invalid syntax

(cpdev50)C:\Users\OE00SG\CashPredictor\dev3\gcp batch>python build_client_db.py ^
More?   --t0 2026-03-02 ^
More?   --build-clients 13581,10095,6089,8964,8989 ^
More?   --db-path C:/Users/OE00SG/CashPredictor/dev3/databases/2026-03-02/2026-03-02/CashPredictor2.db
Traceback (most recent call last):
  File "C:\Users\OE00SG\CashPredictor\dev3\gcp batch\build_client_db.py", line 4, in <module>
    import CreateDatabase
  File "C:\Users\OE00SG\CashPredictor\dev3\gcp batch\CreateDatabase.py", line 1304
    )        min_date, max_date = cursor.fetchone()
             ^^^^^^^^
SyntaxError: invalid syntax

(cpdev50)C:\Users\OE00SG\CashPredictor\dev3\gcp batch>python build_client_db.py ^
More?   --t0 2026-03-02 ^
More?   --build-clients 13581,10095,6089,8964,8989 ^
More?   --db-path C:/Users/OE00SG/CashPredictor/dev3/databases/2026-03-02/2026-03-02/CashPredictor2.db
[INFO] Using client list from CLI: [13581, 10095, 6089, 8964, 8989]
przed client_ids = df_invo_all['INVO_CLNTNO'].dropna().unique()
Kolejność przetwarzania (od najmniejszej liczby wierszy INVO):
 1. klient 13581 → 838 wierszy INVO
 2. klient 10095 → 1225 wierszy INVO
 3. klient 6089 → 2424 wierszy INVO
 4. klient 8964 → 2966 wierszy INVO
 5. klient 8989 → 3040 wierszy INVO
 6. klient 9320 → 3695 wierszy INVO
 7. klient 6558 → 4933 wierszy INVO
 8. klient 10069 → 33915 wierszy INVO
[INFO] Finalna lista klientów do przetworzenia: [13581, 10095, 6089, 8964, 8989]
Kolejność przetwarzania (od najmniejszej liczby wierszy INVO):
 1. klient 13581 → 838 wierszy INVO
 2. klient 10095 → 1225 wierszy INVO
 3. klient 6089 → 2424 wierszy INVO
 4. klient 8964 → 2966 wierszy INVO
 5. klient 8989 → 3040 wierszy INVO
 6. klient 9320 → 3695 wierszy INVO
 7. klient 6558 → 4933 wierszy INVO
 8. klient 10069 → 33915 wierszy INVO
po client_ids = df_invo_all['INVO_CLNTNO'].dropna().unique() order by _counts.sort_values('cnt', ascending=True)['INVO_CLNTNO']
client_id:  13581
Traceback (most recent call last):
  File "C:\Users\OE00SG\CashPredictor\dev3\gcp batch\build_client_db.py", line 66, in <module>
    main()
    ~~~~^^
  File "C:\Users\OE00SG\CashPredictor\dev3\gcp batch\build_client_db.py", line 59, in main
    CreateDatabase.CreateDatabase(
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
        config["first_model_params"],
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
        t0,
        ^^^
        create_db_from_one_excel=True
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "C:\Users\OE00SG\CashPredictor\dev3\gcp batch\CreateDatabase.py", line 770, in CreateDatabase
    validate_required_schema_for_create_database(cursor)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^
  File "C:\Users\OE00SG\CashPredictor\dev3\gcp batch\CreateDatabase.py", line 85, in validate_required_schema_for_create_database
    raise RuntimeError(
    ...<2 lines>...
    )
RuntimeError: Baza nie ma pełnego schematu wymaganego przez CreateDatabase; najpierw uruchom DBInit. brak widoków: stats_pivot_view, dataset_raw_view

(cpdev50)C:\Users\OE00SG\CashPredictor\dev3\gcp batch>python build_client_db.py ^
More?   --t0 2026-03-02 ^
More?   --build-clients 13581,10095,6089,8964,8989 ^
More?   --db-path C:/Users/OE00SG/CashPredictor/dev3/databases/2026-03-02/2026-03-02/CashPredictor2.db
[INFO] Using client list from CLI: [13581, 10095, 6089, 8964, 8989]
przed client_ids = df_invo_all['INVO_CLNTNO'].dropna().unique()
Kolejność przetwarzania (od najmniejszej liczby wierszy INVO):
 1. klient 13581 → 838 wierszy INVO
 2. klient 10095 → 1225 wierszy INVO
 3. klient 6089 → 2424 wierszy INVO
 4. klient 8964 → 2966 wierszy INVO
 5. klient 8989 → 3040 wierszy INVO
 6. klient 9320 → 3695 wierszy INVO
 7. klient 6558 → 4933 wierszy INVO
 8. klient 10069 → 33915 wierszy INVO
[INFO] Finalna lista klientów do przetworzenia: [13581, 10095, 6089, 8964, 8989]
Kolejność przetwarzania (od najmniejszej liczby wierszy INVO):
 1. klient 13581 → 838 wierszy INVO
 2. klient 10095 → 1225 wierszy INVO
 3. klient 6089 → 2424 wierszy INVO
 4. klient 8964 → 2966 wierszy INVO
 5. klient 8989 → 3040 wierszy INVO
 6. klient 9320 → 3695 wierszy INVO
 7. klient 6558 → 4933 wierszy INVO
 8. klient 10069 → 33915 wierszy INVO
po client_ids = df_invo_all['INVO_CLNTNO'].dropna().unique() order by _counts.sort_values('cnt', ascending=True)['INVO_CLNTNO']
client_id:  13581
Dane zostały skopiowane z widoku do tabeli 'INVO_CLHS_JOINED_TAB'.
Operacja zakończona sukcesem.
Tabela 'group_cust_inv_days' została pomyślnie wypełniona.
08:57:54
Rozpoczynam partiami wstawianie do 'extended_grouped_client_days_tab'...
Wstawiono partię: ROK=2025, MIESIAC=1 (rowcount=5)
Wstawiono partię: ROK=2025, MIESIAC=2 (rowcount=32)
Wstawiono partię: ROK=2025, MIESIAC=3 (rowcount=315)
Wstawiono partię: ROK=2025, MIESIAC=4 (rowcount=444)
Wstawiono partię: ROK=2025, MIESIAC=5 (rowcount=451)
Wstawiono partię: ROK=2025, MIESIAC=6 (rowcount=430)
Wstawiono partię: ROK=2025, MIESIAC=7 (rowcount=445)
Wstawiono partię: ROK=2025, MIESIAC=8 (rowcount=488)
Wstawiono partię: ROK=2025, MIESIAC=9 (rowcount=490)
Wstawiono partię: ROK=2025, MIESIAC=10 (rowcount=658)
Wstawiono partię: ROK=2025, MIESIAC=11 (rowcount=671)
Wstawiono partię: ROK=2025, MIESIAC=12 (rowcount=723)
Wstawiono partię: ROK=2026, MIESIAC=1 (rowcount=716)
Wstawiono partię: ROK=2026, MIESIAC=2 (rowcount=664)
Wstawiono partię: ROK=2026, MIESIAC=3 (rowcount=705)
Wstawiono partię: ROK=2026, MIESIAC=4 (rowcount=660)
Wstawiono partię: ROK=2026, MIESIAC=5 (rowcount=682)
Wstawiono partię: ROK=2026, MIESIAC=6 (rowcount=448)
Wszystkie partie zostały zaimportowane.
08:57:55
Proces zakończony.
Rozpoczynam partiami wstawianie do 'summary_client_days_tab'...
Tabela summary_client_days_tab jest pusta. Zaczynam od początku.
08:57:55
Wstawiono ROK=2025, MIESIAC=1 -> 5 wierszy (narastająco=5)
Wstawiono ROK=2025, MIESIAC=2 -> 32 wierszy (narastająco=37)
Wstawiono ROK=2025, MIESIAC=3 -> 315 wierszy (narastająco=352)
Wstawiono ROK=2025, MIESIAC=4 -> 444 wierszy (narastająco=796)
Wstawiono ROK=2025, MIESIAC=5 -> 451 wierszy (narastająco=1247)
Wstawiono ROK=2025, MIESIAC=6 -> 430 wierszy (narastająco=1677)
Wstawiono ROK=2025, MIESIAC=7 -> 445 wierszy (narastająco=2122)
Wstawiono ROK=2025, MIESIAC=8 -> 488 wierszy (narastająco=2610)
Wstawiono ROK=2025, MIESIAC=9 -> 490 wierszy (narastająco=3100)
Wstawiono ROK=2025, MIESIAC=10 -> 658 wierszy (narastająco=3758)
Wstawiono ROK=2025, MIESIAC=11 -> 671 wierszy (narastająco=4429)
Wstawiono ROK=2025, MIESIAC=12 -> 723 wierszy (narastająco=5152)
Wstawiono ROK=2026, MIESIAC=1 -> 716 wierszy (narastająco=5868)
Wstawiono ROK=2026, MIESIAC=2 -> 664 wierszy (narastająco=6532)
Wstawiono ROK=2026, MIESIAC=3 -> 705 wierszy (narastająco=7237)
Wstawiono ROK=2026, MIESIAC=4 -> 660 wierszy (narastająco=7897)
Wstawiono ROK=2026, MIESIAC=5 -> 682 wierszy (narastająco=8579)
Wstawiono ROK=2026, MIESIAC=6 -> 448 wierszy (narastająco=9027)
Wszystkie partie zostały zaimportowane. Łącznie wstawiono (teraz) = 9027.
08:57:57
[2026-04-15 09:00:00.000030] Inserted rows so far: 37997
[2026-04-15 09:00:00.000030] Remaining rows to insert: -11677
[2026-04-15 09:00:00.000030] Last row in statystyki_faktur: [('1', '13581', '313534', '529575', Timestamp('2026-02-27 00:00:00'), 'zapłacone_po_terminie', 38.5, 7.7781745930520225, 7.5, 9.192388155425117, 2280.42, 1140.21, 1351.5780436955908, 2, 60, Timestamp('2026-04-15 09:00:00'))]
Statystyki faktur zostały obliczone i zapisane.
09:00:58
Zakres dat w widoku: 2025-01-27 - 2026-06-27
Traceback (most recent call last):
  File "C:\Users\OE00SG\CashPredictor\dev3\gcp batch\build_client_db.py", line 66, in <module>
    main()
    ~~~~^^
  File "C:\Users\OE00SG\CashPredictor\dev3\gcp batch\build_client_db.py", line 59, in main
    CreateDatabase.CreateDatabase(
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
        config["first_model_params"],
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
        t0,
        ^^^
        create_db_from_one_excel=True
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "C:\Users\OE00SG\CashPredictor\dev3\gcp batch\CreateDatabase.py", line 1365, in CreateDatabase
    cursor.execute(
    ~~~~~~~~~~~~~~^
        query_batch_insert,
        ^^^^^^^^^^^^^^^^^^^
    ...<7 lines>...
        )
        ^
    )
    ^
sqlite3.OperationalError: no such table: stats_pivot_view
